--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,12 @@
   {% endif %}
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="{{ '/assets/images/Epitech_Official_Logo.png' | relative_url }}">
+  <link rel="icon" type="image/png" href="{{ '/assets/images/Site_Decouverte_Icone.png' | relative_url }}">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+  <!-- Open Graph tags -->
 </head>
 <body>
   <!-- Menu latéral -->
